[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Scripts/WhereLook.gd" type="Script" id=2]
[ext_resource path="res://Menus/PauseMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://Models/m4.fbx" type="PackedScene" id=4]
[ext_resource path="res://Animations/m4Anim.tres" type="Animation" id=5]
[ext_resource path="res://Textures/crosshair.png" type="Texture" id=6]
[ext_resource path="res://Fonts/Default.tres" type="DynamicFont" id=7]

[sub_resource type="CapsuleMesh" id=2]
radius = 0.5
mid_height = 1.5

[sub_resource type="CapsuleShape" id=3]
radius = 0.5
height = 1.5

[sub_resource type="GDScript" id=4]

[sub_resource type="Animation" id=6]
resource_name = "PitolFire"
length = 0.2

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Head/Camera/m4:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0.259509, -0.533207, -0.634981 ) ]
}

[node name="Player" type="KinematicBody"]
script = ExtResource( 1 )
gravity = 19.0
jump = 10

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 3 )

[node name="Head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.984692, 0 )

[node name="Camera" type="Camera" parent="Head"]
script = ExtResource( 2 )

[node name="RayCast" type="RayCast" parent="Head/Camera"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0.091, -0.0805881, 0 )
enabled = true
cast_to = Vector3( 0, -2.507, 0 )
script = SubResource( 4 )

[node name="HoldPosition" type="Spatial" parent="Head/Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0905913, -0.174, -2.492 )

[node name="GunCast" type="RayCast" parent="Head/Camera"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -0.147183, 0 )
enabled = true
cast_to = Vector3( 0, -25, 0 )

[node name="m4" parent="Head/Camera" instance=ExtResource( 4 )]
transform = Transform( -4.71399e-09, 0, -0.107844, 0, 0.107844, 0, 0.107844, 0, -4.71399e-09, 0.259509, -0.533207, -0.634981 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/PitolFire = SubResource( 6 )
anims/RESET = SubResource( 7 )
anims/m4Anim = ExtResource( 5 )

[node name="GroundCheck" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.467534, 0 )
enabled = true

[node name="Control" parent="." instance=ExtResource( 3 )]

[node name="FPSCounter" type="RichTextLabel" parent="."]
margin_right = 96.0
margin_bottom = 18.0
custom_fonts/normal_font = ExtResource( 7 )
text = "FPS:"

[node name="CrossHair" type="TextureRect" parent="."]
visible = false
anchor_left = 0.485
anchor_top = 0.5
anchor_right = 0.485
anchor_bottom = 0.5
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 6 )
